050 ==> 197744 : Lists of languages miss en-US.
051 ==> 197622 : digiKam crashes on exit.
052 ==> 197808 : Bad images sort order when starting digiKam.
053 ==> 197641 : Can't delete exif x-default caption once set.
054 ==> 196437 : digiKam crashes at startup.
056 ==> 197868 : digiKam crashes on startup (digikam-0.10.0-2/x86_64/Archlinux).
057 ==> 196686 : Iconview (Qt4 Model/View based) : Select multiple images with Ctrl + Mouse not working anymore in 1.0.0-beta1
058 ==> 197961 : Cameragui freezes digikam when starting to download images from camera.
059 ==> 197445 : digiKam freezes while attempting to import images from canon powershot a540.
060 ==> 198067 : digiKam does not show any pictures.
061 ==> 186638 : Canon 450D import issues.
062 ==> 

*********************************************************************************************************
digiKam 1.0.0-beta1 - Release date: 2009-06-07

NEW FEATURES:

General        : Add new Batch Queue Manager (http://www.digikam.org/node/427).
General        : New tool bar animation banner.
General        : Fix compilation under MSVC 9.
General        : New first run assistant (http://www.digikam.org/node/442).
General        : New dialog to show Database statistics.
General        : Add support of wavelets image file format PGF (http://www.libpgf.org).

AlbumGui       : Icon view is now based on pure Qt4 model/view.
AlbumGui       : New overlay button over icon view items to perform lossless rotations.

ImageEditor    : New Liquid Rescale tool (http://www.digikam.org/node/439).

CameraGUI      : New history of camera actions processed.

BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):

001 ==> 091742 : Batch process auto levels.
002 ==> 149361 : Not all edit actions are available as batch commands (for example auto-levels and gamma correction).
003 ==> 187523 : digiKam crashes on startup (undefined symbol).
004 ==> 187569 : Crash on star removing when filtering by stars.